--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
 
         <div class="social-icons">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
+          <a href="#" ><i class="bx bxl-facebook"></i></a> 
           <a href="#"><i class="bx bxl-linkedin"></i></a>
           <a href="#"><i class="bx bxl-instagram"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/mahammadali-k" ><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -352,7 +352,9 @@
         <h2>Contact Me</h2>
       </div>
 
-      <form action="#">
+      <form   action="https://formspree.io/f/mvgwpblj"
+  method="POST">
+
         <input type="text" placeholder="Your Name"  />
         <input type="email" placeholder="Your Email"  />
         <input type="text" placeholder="Your Subject"  />
