--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="home-image">
         <div class="img-box"></div>
-        <img class="image1" src="/./img/main.jpg" alt="" />
+        <img class="image1" src="/./img/me&myself&I.png" alt="" />
       </div>
     </section>
 
