--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="btn-box">
-          <a href="#" class="btn">Download CV</a>
+          <a href="./img/MAHAMMADALI-KARIMOV-FlowCV-Resume-20250804 (1).pdf" download="MAHAMMADALI-KARIMOV-FlowCV-Resume-20250804" id="downloadCvBtn" class="btn">Download CV</a>
           <a href="#" class="btn">Hire Me Now !</a>
         </div>
 
